--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website</title>
+    <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
-        
+        <div>
+            <h2>my first website</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis debitis temporibus vitae numquam asperiores facilis tenetur illo possimus quasi velit eaque laboriosam incidunt, qui optio?</p>
+        </div>
 </body>
 </html>
