secodeor third added to github

--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
             <h2>my first website</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis debitis temporibus vitae numquam asperiores facilis tenetur illo possimus quasi velit eaque laboriosam incidunt, qui optio?</p>
         </div>
+        <div>
+            <h2>my second website</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis debitis temporibus vitae numquam asperiores facilis tenetur illo possimus quasi velit eaque laboriosam incidunt, qui optio?</p>
+        </div>
+        <div>
+            <h2>my third website</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis debitis temporibus vitae numquam asperiores facilis tenetur illo possimus quasi velit eaque laboriosam incidunt, qui optio?</p>
+        </div>
 </body>
 </html>
