--- a/index.html
+++ b/index.html
@@ -19,5 +19,12 @@
             <h2>my third website</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis debitis temporibus vitae numquam asperiores facilis tenetur illo possimus quasi velit eaque laboriosam incidunt, qui optio?</p>
         </div>
+        <div>
+            <ul>
+                <li>git add .</li>
+                <li>git commit -m"meaningful </li>
+                <li>git push</li>
+            </ul>
+        </div>
 </body>
 </html>
